--- a/src/pages/materials/materials.pcss
+++ b/src/pages/materials/materials.pcss
@@ -4,11 +4,14 @@
 
   .materials__header {
     padding: var(--header-padding);
+    font-size: var(--header-descr-font-size);
+    font-weight: 600;
   }
 
   .materials__content {
     display: grid;
     justify-content: space-between;
+    justify-items: center;
     grid-template-columns: var(--card-column);
     gap: 1rem; 
   }
