--- a/src/widget/planet-btn/planet-btn.pcss
+++ b/src/widget/planet-btn/planet-btn.pcss
@@ -8,7 +8,9 @@
   transition: 0.5s;
 
   .planet-btn__content {
-    font-weight: var(--vt-btn-font-weight);
+    font-family: var(--sub-font);
+    font-size: var(--button-font-size);
+    font-weight: 500;
   }
 
   &:hover {
