--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -52,6 +52,7 @@
   --container-padding: 0px 144px;
   --card-padding: 32px 24px;
   --header-padding: 48px 0px;
+  --create-material-header-padding: 32px 0px 0px 0px;
   --button-padding: 9px 24px 15px 24px;
   --material-card-padding: 64px;
   --material-header-padding: 48px 0px;
@@ -69,6 +70,7 @@
   --material-descr-font-size: 22px;
   --material-text-font-size: 20px;
   --material-title-font-size: 36px;
+  --editor-font-size: 20px;
 
   --card-header-line-height: 24px;
   --material-descr-line-height: 26px;
