--- a/src/widget/planet-editor/planet-editor.pcss
+++ b/src/widget/planet-editor/planet-editor.pcss
@@ -28,9 +28,9 @@
 .tiptap p.is-editor-empty:first-child::before {
   font-family: var(--sub-font);
   font-size: var(--editor-font-size);
+  color: var(--color-placeholder);
   content: attr(data-placeholder);
   float: left;
-  color: #adb5bd;
   pointer-events: none;
   height: 0;
 }
