--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -93,6 +93,7 @@
     --container-padding: 0px 16px;
     --material-header-padding: 32px 16px;
     --material-card-padding: 24px 16px;
+    --button-padding: 0 8px;
 
     --card-header-font-size: 18px;
     --card-descr-font-size: 14px;
