--- a/src/widget/planet-back-btn/planet-back-btn.pcss
+++ b/src/widget/planet-back-btn/planet-back-btn.pcss
@@ -1,6 +1,6 @@
 .planet-back-btn {
   color: var(--color-back-btn-text);
-  font-family: var(--sub-font);
+  font-family: var(--button-font);
   font-size: 18px;
   font-weight: 800;
   display: flex;
