--- a/src/widget/planet-btn/planet-btn.pcss
+++ b/src/widget/planet-btn/planet-btn.pcss
@@ -8,7 +8,7 @@
   transition: 0.5s;
 
   .planet-btn__content {
-    font-family: var(--sub-font);
+    font-family: var(--button-font);
     font-size: var(--button-font-size);
     font-weight: 500;
   }
