--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+  font-family: FuturaPT-Demi;
+  src: url('fonts/FuturaPT/FuturaPT-Demi.ttf');
+}
+
+@font-face {
   font-family: SourceSans3-Regular;
   src: url('fonts/SourceSans3/static/SourceSans3-Regular.ttf');
 }
