--- a/src/pages/material/material.pcss
+++ b/src/pages/material/material.pcss
@@ -26,7 +26,7 @@
     }
 
     .material__short-descr {
-      font-family: var(--sub-font);
+      font-family: var(--button-font);
       font-size: var(--material-descr-font-size);
       line-height: var(--material-descr-line-height);
       margin-bottom: var(--material-descr-bottom-margin);
