fix: add create-api

--- a/src/widget/planet-material-card/planet-material-card.pcss
+++ b/src/widget/planet-material-card/planet-material-card.pcss
@@ -1,5 +1,5 @@
 .material-card {
-  max-width: 288px;
+  width: 288px;
   height: var(--card-height);
   padding: var(--card-padding);
   border-radius: var(--radius-planet-card);
