--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -93,6 +93,7 @@
     --create-material-title-bottom-margin: 12px;
     --create-material-descr-bottom-margin: 24px;
 
+    --header-padding: 32px 0px;
     --card-padding: 24px;
     --container-padding: 0px 16px;
     --material-header-padding: 32px 16px;
